# Four_Plus_Two

./: .gitignore  README.md  build.gradle.kts  database.rules.json  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  settings.gradle.kts
Summerizer-model/: main.py  pyproject.toml
app/: build.gradle.kts
app-android/app/: build.gradle.kts
app-android/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
frontend/: AUTHENTICATION_SETUP.md  PWA_SETUP.md  middleware.ts  next.config.ts  package-lock.json  package.json  setup-env.js  test-connections.js
frontend/public/: browserconfig.xml  manifest.json  register-sw.js  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/i18n/: LocaleProvider.tsx
frontend/src/lib/: firestore.ts  jwt.ts  mongodb.ts  s3.ts
frontend/src/types/: user.ts
frontend/types/: next-pwa.d.ts
functions/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
gradle/: libs.versions.toml
grafana/dashboards/: Sensor Overview.json
grafana/provisioning/dashboards/: dashboards.yml
ml/: app.py  binary_safety_model_final.joblib  binary_scaler_final.joblib  feature_cols_final.joblib  main.py  mock_data_generator.py  pyproject.toml  scaler_final.joblib  test_api.py  test_mock_integration.py
prometheus/: prometheus.yml
sensors/: config.py  continuous_data.py  cron_data.py  firbase.py  firebase_utils.py  requirements.txt  sensor.ino  test_arduino.py  web_endpoint.py
(+156 files in other folders)
